--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^5.4.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "xss-clean": "^0.1.1"
   }
 }
